development-container/yamls/development-container-test.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devel-container-deployment-test1
  namespace: dev-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devel-container-deployment-test1
  template:
    metadata:
      labels:
        app: devel-container-deployment-test1
    spec:
      containers:
        - name: devel-container
          image: docker.io/rahulkallur/condense-development-container:1.0.0
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred

---

# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devel-container-service-test1
  namespace: dev-container
spec:
  selector:
    app: devel-container-deployment-test1
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 3000
  type: ClusterIP
