development-container/yamls/development-proxy.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devel-proxy
  namespace: dev-container
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: devel-proxy
  template:
    metadata:
      labels:
        app: devel-proxy
    spec:
      containers:
        - name: devel-proxy
          image: docker.io/rahulkallur/condense-development-proxy:1.0.6
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
      

---

# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devel-proxy-service
  namespace: dev-container
spec:
  selector:
    app: devel-proxy
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
  type: ClusterIP
